welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: value ou is not a member of Boolean
	var vubisuit():Boolean = true ou false
                                      ^Program:3: error: not found: value vubisuit
	var vubisuit():Boolean = true ou false
            ^Program:4: error: not found: value vuBiscuit
	if (vuBiscuit()== true) {
            ^Program:11: error: not found: value vuBiscuit
				vuBiscuit==true
                                ^Program:7: error: type mismatch;
 found   : Unit
 required: Boolean
	for (x <- 0 to 6) {
               ^